--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="https://npmcdn.com/async@1.5.2"></script>
+	<script src="https://npmcdn.com/lodash@4.5.1"></script>
 	<script src="main.js"></script>
 </body>
 </html>
